@@ -50,6 +50,11 @@ except KeyError:
         searchdirs=os.environ['INCLUDE'].split(';')
     except KeyError:
         searchdirs=['/usr/include']
+        try:
+            searchdirs.insert(0, os.path.join('/usr/include',
+                                              os.environ['MULTIARCH']))
+        except KeyError:
+            pass
 
 def main():
     global filedict
